<resources>
    <!-->XML to define Srtings so no hardcoded Text is used in the App<-->

    <!-->Buttons<-->
    <string name="btn_login">Login</string>
    <string name="btn_login_nav">zum Login</string>
    <string name="btn_register">Registrieren</string>
    <string name="btn_register_nav">zur Registrierung</string>
    <string name="btn_save">Speichern</string>
    <string name="btn_months">Monate</string>
    <string name="btn_years">Jahre</string>
    <string name="switch_spendings">Ausgabe</string>

    <!-->Headlines<-->
    <string name="app_name">earny</string>
    <string name="h_login">Login</string>
    <string name="h_register">Account erstellen</string>
    <string name="h_welcome">Willkommen</string>
    <string name="h_balance">auf deinem Bankkonto</string>
    <string name="h_bookings">Buchungen</string>
    <string name="h_account">Kontostand</string>
    <string name="h_total">gesamt</string>
    <string name="h_income">Einkommen</string>
    <string name="h_income2">Einnahme</string>
    <string name="h_expenses">Ausgaben</string>
    <string name="h_expense">Ausgabe</string>
    <string name="h_emptyAccount">0 €</string>
    <string name="eurosign">%1$s €</string>


    <!-->Hints<-->
    <string name="hint_username">Name</string>
    <string name="hint_password">Passwort</string>
    <string name="hint_password_rep">Passwort wiederholen</string>
    <string name="hint_newEntry">neue Ausgabe</string>
    <string name="hint_note">Notiz</string>
    <string name="hint_date">Datum auswählen</string>

    <!-->Menu Strings<-->
    <string name="menu_home">Startseite</string>
    <string name="menu_entries">neue Ausgabe</string>
    <string name="menu_statistics">Statistiken</string>

    <!-->Image Descriptions<-->
    <string name="img_dollarsign">Dollarsign</string>
    <string name="img_earnyLogo">Earny Logo</string>

</resources>