<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_farbverlauf"
    tools:context=".MainActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/img_login_earny_logo"
        android:layout_width="300dp"
        android:layout_height="210dp"
        android:layout_centerHorizontal="true"
        android:foreground="@drawable/logo_earny_bunt"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_earny_bunt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  Login Headertext -->
    <TextView
        android:id="@+id/txt_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/margins_sides"
        android:layout_marginBottom="10dp"
        android:text="@string/h_login"
        android:textColor="@color/white"
        android:textSize="@dimen/font_h1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login_earny_logo" />

    <!--  Username Textfield -->
    <EditText
        android:id="@+id/txt_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margins_sides"
        android:layout_marginBottom="10dp"
        android:background="@color/white_transparent_background"
        android:drawableLeft="@drawable/icon_person_white"
        android:drawablePadding="20dp"
        android:hint="@string/hint_username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/font_hints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_login_login" />

    <!--  Password Textfield -->
    <EditText
        android:id="@+id/txt_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margins_sides"
        android:layout_marginBottom="5dp"
        android:background="@color/white_transparent_background"
        android:drawableLeft="@drawable/icon_password_lock_white"
        android:drawablePadding="20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/font_hints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_login_username" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margins_sides"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/dark_blue_buttons"
        android:text="@string/btn_login"
        android:textSize="@dimen/font_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_login_password" />

    <!-- Back to registration Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/dark_blue_buttons"
        android:text="@string/btn_register_nav"
        android:textSize="@dimen/font_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_login" />


</androidx.constraintlayout.widget.ConstraintLayout>