<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_farbverlauf"
    tools:context=".MainActivity">

    <!--  Logo -->
    <ImageView
        android:id="@+id/img_register_earny_logo"
        android:layout_width="300dp"
        android:layout_height="210dp"
        android:foreground="@drawable/logo_earny_bunt"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_earny_bunt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Register Headertext -->
    <TextView
        android:id="@+id/txt_register_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margins_sides"
        android:text="@string/h_register"
        android:textColor="@color/white"
        android:textSize="@dimen/font_h1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_register_earny_logo" />

    <!--  Username Textfield -->
    <EditText
        android:id="@+id/txt_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margins_sides"
        android:background="@color/white_transparent_background"
        android:drawableLeft="@drawable/icon_person_white"
        android:drawablePadding="20dp"
        android:hint="@string/hint_username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/font_hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_register_register" />

    <!--  Password Textfield -->
    <EditText
        android:id="@+id/txt_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margins_sides"
        android:background="@color/white_transparent_background"
        android:drawableLeft="@drawable/icon_password_lock_white"
        android:drawablePadding="20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/font_hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_register_username" />

    <!--  Password WDH Textfield -->
    <EditText
        android:id="@+id/txt_register_password_rep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_sides"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margins_sides"
        android:background="@color/white_transparent_background"
        android:drawableLeft="@drawable/icon_password_lock_white"
        android:drawablePadding="20dp"
        android:hint="@string/hint_password_rep"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_register_password" />


    <!--  Balance Textfield -->

    <!-- Register Button -->

    <!-- Back to login Button -->

    <EditText
        android:id="@+id/txt_register_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_register_password_rep"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#30ffffff"
        android:drawableLeft="@android:drawable/btn_star"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="Enter Balance"
        android:inputType="numberDecimal"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:backgroundTint="@color/dark_blue_buttons"
        android:text="@string/btn_register"
        android:textSize="@dimen/font_buttons"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_register_password_rep" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/dark_blue_buttons"
        android:text="@string/btn_login_nav"
        android:textSize="@dimen/font_buttons"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register_register" />


</androidx.constraintlayout.widget.ConstraintLayout>